tests/chapter_18/invalid_parse/missing_struct_keyword.c
int main(void) {
  struct x;
  x y; // cannot specify struct typew/out struct keyword
  return 0;
}